# disc-agent

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile
.github/workflows/: docker_push.yaml  release.yaml  toml_parser.yaml
src/: errors.rs  event_handler.rs  main.rs
src/brokers/: amqp.rs  broker.rs  mod.rs
src/clients/: http_client.rs
src/schemas/: agent.rs  broker.rs  dependencies.rs  mod.rs
