[package]
name = "disc-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
lapin = { version = "3.7.2", default-features = true }
reqwest = { version = "0.13.1", default-features = true, features = [
    "charset",
    "http2",
    "rustls",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [
    "alloc",
] }
serenity = { version = "0.12.5", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "utils",
] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
    "serde",
] }
